# bus_channel_strip

./: .gitignore  .pre-commit-config.yaml  @memo.txt  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  GUI_DESIGN.md  LICENSE  README.md  build.rs  build_output.txt  bundler.toml  buttercomp2_analysis.md  justfile  memo.txt  mkdocs.yml  reset_history.bat  rust-toolchain.toml  success_memo.txt
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: main.yml  pages.yml
advisor/: .env.example  Cargo.toml
advisor/src/: claude.rs  main.rs  models.rs
advisor/src/routes/: mod.rs  profiles.rs  suggest.rs
cpp/: buttercomp2.cpp  buttercomp2.h
docs/: AGENTS.md  CLIPPING_INSIGHTS.md  DOCS_ENHANCEMENT_PLAN.md  DSP_ENHANCEMENT_PLAN.md  GUI_DESIGN.md  HAAS_MODULE_SPEC.md  MULTI_FX_UI_DESIGN.md  PUNCH_MODULE_SPEC.md  SHEEN_MODULE_SPEC.md  SYSTEM_PROMPT.md  TESTING.md  V2_ROADMAP.md  VIZIA_AGENT_SPEC.md  index.html  index.md  install.md
docs/adr/: 0001-dyneq-band-expand-collapse-ui.md  0002-compressor-model-ui-switching.md  0003-dyneq-band-control-grouping.md  README.md
docs/modules/: api5500.md  buttercomp2.md  dynamic_eq.md  haas.md  index.md  pultec.md  punch.md  transformer.md
docs/presets/: buses.md  genres.md  techniques.md
docs/specs/: compressor-model-ui-switching.md  dyneq-band-expand-collapse.md  reascript-mix-advisor.md  studio-profiles-schema.md  studio-profiles.json
docs/stylesheets/: extra.css
infra/llm-stack/: .env  .gitignore  README.md  docker-compose.yml  setup.ps1
jsfx/: bcs_spectrum_reader.jsfx
memory/: MEMORY.md
scripts/: install.ps1
scripts/bcs_advisor/: INSTALL.md  ab_compare.lua  advisor_client.lua  main.lua  panel.lua  param_map.lua
scripts/bcs_advisor/lib/: json.lua
site/: astro.config.mjs  package-lock.json  package.json
site/src/content/docs/: architecture.md  changelog.md  contributing.md  index.mdx  install.md  parameters.md  roadmap.md
site/src/content/docs/modules/: api5500.md  buttercomp2.mdx  dynamic_eq.md  haas.md  index.md  pultec.md  punch.mdx  sheen.md  transformer.mdx
site/src/content/docs/presets/: buses.md  genres.md  techniques.mdx
site/src/styles/: custom.css
src/: api5500.rs  biquad_sanity_test.rs  buttercomp2.rs  components.rs  dynamic_eq.rs  editor.rs  editor_egui_old.rs  haas.rs  lib.rs  oversampler.rs  plugin_integration_tests.rs  pultec.rs  punch.rs  shaping.rs  sheen.rs  spectral.rs  styles.rs  transformer.rs
