[package]
name = "bcs-advisor"
version = "0.1.0"
edition = "2021"
description = "Mix advisor HTTP service for Bus Channel Strip — studio profiles + Claude API"
license = "GPL-3.0-or-later"

[[bin]]
name = "bcs-advisor"
path = "src/main.rs"

[dependencies]
axum            = "0.7"
tokio           = { version = "1", features = ["full"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
reqwest         = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tower-http      = { version = "0.5", features = ["cors", "trace"] }
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow          = "1"
